fixed overflow and disabled text selection on index

--- a/client/css/monitor.index.css
+++ b/client/css/monitor.index.css
@@ -2,6 +2,12 @@ body {
 	height: 100%;
     margin: 0px;
     padding: 0px;
+    overflow: hidden;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 html{
